fix(tabs): apply stretched only horizontally

--- a/packages/components/src/components/Tabs/Tabs.module.css
+++ b/packages/components/src/components/Tabs/Tabs.module.css
@@ -23,10 +23,8 @@
   --tab-padding-block: var(--kbq-size-xs);
 }
 
-.horizontal {
-  &.stretched {
-    --tab-inline-size: 100%;
-  }
+.stretched {
+  --tab-inline-size: 100%;
 }
 
 .vertical {
